Archive2/84/8505373157bd69/output
main.cpp:3:10: error: variable has incomplete type 'void'
    void val;
         ^
1 error generated.
